fix due date input spacing for legcay ui
Fixes: CNVS-26114

test plan:
- as an admin or teacher using legacy UI
- create a new assignment
- the "available from" dates should now be aligned as such:
  (new) http://screencast.com/t/QgcGKyMUa vs
  (old) http://screencast.com/t/Vj2NseOp
- ensure the area remains unchanged in new UI

Reviewed-on: https://gerrit.instructure.com/69692
Tested-by: Jenkins
Product-Review: Colleen Palmer <colleen@instructure.com>
QA-Review: Myller de Araujo <myller@instructure.com>

--- a/app/stylesheets/jst/assignments/DueDateOverride.scss
+++ b/app/stylesheets/jst/assignments/DueDateOverride.scss
@@ -88,7 +88,6 @@ $assign-border-color: #ccc;
 .Available-from-to {
   display: flex;
   .Available-from-to__prompt {
-    flex: 1;
     text-align: center;
     line-height: 38px;
     padding: 0 $ic-sp/2;
